Starting turning library into a proper Python package
Resuming work on this proof-of-concept library in order to make
it a suitable candidate to list in PyPI etc. Renaming the library
from "tldverify" to "uniaccept" to reflect the broader scope of
checking domain validity rather than merely TLDs.

--- a/README
+++ b/README
@@ -72,6 +72,13 @@ refreshtlddb([filename]):
     update this file more often than once per day.
 
 
+Dependencies
+------------
+
+This library is dependent upon the DNS Python library, which is
+available from http://www.dnspython.org/. All other libraries should be
+part of the standard Python distribution.
+
 
 Information References
 ----------------------
